Fix misaligned app name in the header

--- a/src/client/app/app.component.scss
+++ b/src/client/app/app.component.scss
@@ -21,6 +21,7 @@
       .app-name {
         font-family: 'Arima Madurai', cursive;
         font-size: 18px;
+        padding-top: 3px;
       }
     }
   }
